--- a/sample.html
+++ b/sample.html
@@ -17,7 +17,7 @@
             <button onclick="myFunction()">Dark Mode</button>
         </div>
         <div class="right">
-            <img src="/images/eeaao.jpg" alt="my picture">
+            <img src="./eeaao.jpg" alt="my picture">
         </div>
     </div>
     <script src="sample.js"></script>
